--- a/Notebooks/CSME2-WS2122-BonusPointAssignment1.ipynb
+++ b/Notebooks/CSME2-WS2122-BonusPointAssignment1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ba6baebe",
+   "id": "5e1ddbb8",
    "metadata": {},
    "source": [
     "# CSME2 Bonus Point Assignment 1\n",
@@ -16,20 +16,20 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "3885dec3",
+   "id": "fa218663",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Add any additional import you need in this cell\n",
     "import numpy as np\n",
     "from sklearn.cluster import kmeans_plusplus, KMeans\n",
-    "\n",
+    "from scipy.io import loadmat\n",
     "np.random.seed(1234)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ecf48df4",
+   "id": "b4ce83ae",
    "metadata": {},
    "source": [
     "### Setup\n",
@@ -39,30 +39,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1f88ed2b",
+   "execution_count": 2,
+   "id": "dd4d9110",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# postion/velocity/acceleration  = 7 + 7 + 7 = 21\n",
+    "# The last 7 columns reprensent the torche corresponding each joint\n",
+    "\n",
+    "train_data = loadmat(\"./sarcos_inv.mat\")[\"sarcos_inv\"]\n",
+    "test_data = loadmat(\"./sarcos_inv_test.mat\")[\"sarcos_inv_test\"]\n",
+    "\n",
+    "# Shuffle data so that it can be random splitted\n",
+    "np.random.seed(42) \n",
+    "np.random.shuffle(train_data)\n",
+    "np.random.shuffle(test_data)\n",
+    "\n",
+    "\n",
     "# Input and output training data\n",
-    "# xs_train = \n",
-    "# ys_train = \n",
+    "\n",
+    "# Split train_data as 80% training data and 20% validation data\n",
+    "n = train_data.shape[0]\n",
+    "xs_train = train_data[:int(n*0.8), :21]  \n",
+    "ys_train = train_data[:int(n*0.8), 21:]\n",
     "\n",
     "# Input and output validation data\n",
-    "# xs_valid = \n",
-    "# ys_valid =\n",
+    "xs_valid = train_data[int(n*0.8):, :21]  \n",
+    "ys_valid = train_data[int(n*0.8):, 21:]  \n",
     "\n",
     "# Input and output test data\n",
-    "# xs_test = \n",
-    "# ys_test = "
+    "xs_test = test_data[:, :21]\n",
+    "ys_test = test_data[:, 21:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "74ff45ed",
+   "execution_count": 3,
+   "id": "9d28195f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(35587, 21)\n",
+      "(35587, 7)\n",
+      "(8897, 21)\n",
+      "(8897, 7)\n",
+      "(4449, 21)\n",
+      "(4449, 7)\n"
+     ]
+    }
+   ],
    "source": [
     "# Check for yourself \n",
     "# The following should lead to output \n",
@@ -73,17 +101,17 @@
     "# (4449, 21)\n",
     "# (4449, 1)\n",
     "\n",
-    "# print(xs_train.shape)\n",
-    "# print(ys_train.shape)\n",
-    "# print(xs_valid.shape)\n",
-    "# print(ys_valid.shape)\n",
-    "# print(xs_test.shape)\n",
-    "# print(ys_test.shape)"
+    "print(xs_train.shape)\n",
+    "print(ys_train.shape)\n",
+    "print(xs_valid.shape)\n",
+    "print(ys_valid.shape)\n",
+    "print(xs_test.shape)\n",
+    "print(ys_test.shape)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d02a8409",
+   "id": "214ccbf3",
    "metadata": {},
    "source": [
     "__Task A.2__ Standardize the data such that\n",
@@ -98,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97a047cf",
+   "id": "b7b4e011",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "192f021a",
+   "id": "6bb0549d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9446a81c",
+   "id": "ff063f50",
    "metadata": {},
    "source": [
     "__Task A.3__"
@@ -145,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc855c18",
+   "id": "bf2267c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1fd21865",
+   "id": "c45fb673",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ac0e14e",
+   "id": "f1ce7c9b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +230,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7c9abd5",
+   "id": "19d4c74f",
    "metadata": {},
    "source": [
     "## Linear regression\n",
@@ -213,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dabf3838",
+   "id": "c2a81ceb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +257,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7c0487d",
+   "id": "a2267c69",
    "metadata": {},
    "source": [
     "### Linear regression with polynomial features\n",
@@ -239,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74098e8f",
+   "id": "06a2838e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ffa50f03",
+   "id": "d96d1495",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +313,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62c67727",
+   "id": "9b297ec8",
    "metadata": {},
    "source": [
     "## Clustering\n",
@@ -295,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6077609",
+   "id": "606b389f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +344,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b22f0d2",
+   "id": "bd81c880",
    "metadata": {},
    "source": [
     "__Task B.2__ Generate test data set and plot it."
@@ -325,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70764445",
+   "id": "2d7dfab6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83dc13c9",
+   "id": "486f31d6",
    "metadata": {},
    "source": [
     "__Task B.3__ Run your $K$-Means algorithm on the test data for $K=2,3,4,5$ clusters and plot the final cluster centers."
@@ -344,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3221a8ba",
+   "id": "128b7bed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9fc25ef0",
+   "id": "61de8273",
    "metadata": {},
    "source": [
     "## Radial Basis Function Network\n",
@@ -363,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b380de13",
+   "id": "dce4d712",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +401,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b30edf7a",
+   "id": "15848950",
    "metadata": {},
    "source": [
     "__Task C.2__ Implement the Gaussian basis functions and transform the data accordingly"
@@ -382,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "482d55c4",
+   "id": "863b5286",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +419,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4b42468",
+   "id": "6267736e",
    "metadata": {},
    "source": [
     "__Task C.3__ Run simple linear regression on the transformed data and evaluate it on the test set"
@@ -400,7 +428,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e21db007",
+   "id": "af1a3e98",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,7 +441,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c2060a2",
+   "id": "744f6036",
    "metadata": {},
    "source": [
     "__Open task__ Can you improve the performance of the RBF network?"
@@ -421,7 +449,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "460bd441",
+   "id": "38c13e03",
    "metadata": {},
    "source": [
     "__Task C.4__ Evaluate your final model (either the one from Task C.3 or your improved model from the open task) on the test data"
@@ -430,7 +458,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce7db571",
+   "id": "6e11369b",
    "metadata": {},
    "outputs": [],
    "source": [
