--- a/Notebooks/CSME2-WS2122-BonusPointAssignment1.ipynb
+++ b/Notebooks/CSME2-WS2122-BonusPointAssignment1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5e1ddbb8",
+   "id": "6e035003",
    "metadata": {},
    "source": [
     "# CSME2 Bonus Point Assignment 1\n",
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "fa218663",
+   "id": "f36d584b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4ce83ae",
+   "id": "9bb9c139",
    "metadata": {},
    "source": [
     "### Setup\n",
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "dd4d9110",
+   "id": "635c9cd2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,21 +61,21 @@
     "# Split train_data as 80% training data and 20% validation data\n",
     "n = train_data.shape[0]\n",
     "xs_train = train_data[:int(n*0.8), :21]  \n",
-    "ys_train = train_data[:int(n*0.8), 21:]\n",
+    "ys_train = train_data[:int(n*0.8), 22]\n",
     "\n",
     "# Input and output validation data\n",
     "xs_valid = train_data[int(n*0.8):, :21]  \n",
-    "ys_valid = train_data[int(n*0.8):, 21:]  \n",
+    "ys_valid = train_data[int(n*0.8):, 22]  \n",
     "\n",
     "# Input and output test data\n",
     "xs_test = test_data[:, :21]\n",
-    "ys_test = test_data[:, 21:]"
+    "ys_test = test_data[:, 22]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "9d28195f",
+   "id": "7855b6bd",
    "metadata": {},
    "outputs": [
     {
@@ -83,11 +83,11 @@
      "output_type": "stream",
      "text": [
       "(35587, 21)\n",
-      "(35587, 7)\n",
+      "(35587,)\n",
       "(8897, 21)\n",
-      "(8897, 7)\n",
+      "(8897,)\n",
       "(4449, 21)\n",
-      "(4449, 7)\n"
+      "(4449,)\n"
      ]
     }
    ],
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "214ccbf3",
+   "id": "f7085648",
    "metadata": {},
    "source": [
     "__Task A.2__ Standardize the data such that\n",
@@ -126,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7b4e011",
+   "id": "b22d6e66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6bb0549d",
+   "id": "5925af84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff063f50",
+   "id": "bdb76c43",
    "metadata": {},
    "source": [
     "__Task A.3__"
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf2267c8",
+   "id": "5cfe4b36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c45fb673",
+   "id": "07577470",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1ce7c9b",
+   "id": "c13a09e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19d4c74f",
+   "id": "97795579",
    "metadata": {},
    "source": [
     "## Linear regression\n",
@@ -241,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2a81ceb",
+   "id": "6ce6a72a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2267c69",
+   "id": "cbb2820f",
    "metadata": {},
    "source": [
     "### Linear regression with polynomial features\n",
@@ -267,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06a2838e",
+   "id": "fb087275",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d96d1495",
+   "id": "0057ac6f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b297ec8",
+   "id": "9ee7a3d1",
    "metadata": {},
    "source": [
     "## Clustering\n",
@@ -323,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "606b389f",
+   "id": "47891f45",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd81c880",
+   "id": "1218620b",
    "metadata": {},
    "source": [
     "__Task B.2__ Generate test data set and plot it."
@@ -353,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d7dfab6",
+   "id": "39216a3a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "486f31d6",
+   "id": "c62cfb81",
    "metadata": {},
    "source": [
     "__Task B.3__ Run your $K$-Means algorithm on the test data for $K=2,3,4,5$ clusters and plot the final cluster centers."
@@ -372,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "128b7bed",
+   "id": "14bf2ec6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61de8273",
+   "id": "38d7b89c",
    "metadata": {},
    "source": [
     "## Radial Basis Function Network\n",
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dce4d712",
+   "id": "2a6503f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15848950",
+   "id": "3c1a9d24",
    "metadata": {},
    "source": [
     "__Task C.2__ Implement the Gaussian basis functions and transform the data accordingly"
@@ -410,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "863b5286",
+   "id": "d6748c55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6267736e",
+   "id": "d3f46f7e",
    "metadata": {},
    "source": [
     "__Task C.3__ Run simple linear regression on the transformed data and evaluate it on the test set"
@@ -428,7 +428,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af1a3e98",
+   "id": "065b2d77",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "744f6036",
+   "id": "f9b73b78",
    "metadata": {},
    "source": [
     "__Open task__ Can you improve the performance of the RBF network?"
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38c13e03",
+   "id": "b06f9fda",
    "metadata": {},
    "source": [
     "__Task C.4__ Evaluate your final model (either the one from Task C.3 or your improved model from the open task) on the test data"
@@ -458,7 +458,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e11369b",
+   "id": "70847071",
    "metadata": {},
    "outputs": [],
    "source": [
