--- a/Notebooks/CSME2-WS2122-BonusPointAssignment1.ipynb
+++ b/Notebooks/CSME2-WS2122-BonusPointAssignment1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6e035003",
+   "id": "bfd664c6",
    "metadata": {},
    "source": [
     "# CSME2 Bonus Point Assignment 1\n",
@@ -15,8 +15,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "f36d584b",
+   "execution_count": 4,
+   "id": "19109187",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9bb9c139",
+   "id": "4fa2e669",
    "metadata": {},
    "source": [
     "### Setup\n",
@@ -39,10 +39,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "635c9cd2",
+   "execution_count": 11,
+   "id": "0d5a8197",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (3116975305.py, line 22)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipykernel_429611/3116975305.py\"\u001b[0;36m, line \u001b[0;32m22\u001b[0m\n\u001b[0;31m    ys_valid = train_data[int(n*0.8):, 22].reshape((:,1))\u001b[0m\n\u001b[0m                                                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "# postion/velocity/acceleration  = 7 + 7 + 7 = 21\n",
     "# The last 7 columns reprensent the torche corresponding each joint\n",
@@ -65,7 +74,7 @@
     "\n",
     "# Input and output validation data\n",
     "xs_valid = train_data[int(n*0.8):, :21]  \n",
-    "ys_valid = train_data[int(n*0.8):, 22]  \n",
+    "ys_valid = train_data[int(n*0.8):, 22].reshape((:,1))\n",
     "\n",
     "# Input and output test data\n",
     "xs_test = test_data[:, :21]\n",
@@ -74,8 +83,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "7855b6bd",
+   "execution_count": 6,
+   "id": "35579fa1",
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7085648",
+   "id": "525325f0",
    "metadata": {},
    "source": [
     "__Task A.2__ Standardize the data such that\n",
@@ -126,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b22d6e66",
+   "id": "d537fa8f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5925af84",
+   "id": "9ac3a72d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +173,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bdb76c43",
+   "id": "a177f464",
    "metadata": {},
    "source": [
     "__Task A.3__"
@@ -173,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5cfe4b36",
+   "id": "e0764d98",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07577470",
+   "id": "786e8a34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c13a09e2",
+   "id": "058d504f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97795579",
+   "id": "ffc2441a",
    "metadata": {},
    "source": [
     "## Linear regression\n",
@@ -241,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ce6a72a",
+   "id": "7b99a849",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +266,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cbb2820f",
+   "id": "0a46725f",
    "metadata": {},
    "source": [
     "### Linear regression with polynomial features\n",
@@ -267,7 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb087275",
+   "id": "744f47c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0057ac6f",
+   "id": "fab21598",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +322,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ee7a3d1",
+   "id": "d83775fe",
    "metadata": {},
    "source": [
     "## Clustering\n",
@@ -323,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47891f45",
+   "id": "d83d4540",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +353,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1218620b",
+   "id": "efed21f3",
    "metadata": {},
    "source": [
     "__Task B.2__ Generate test data set and plot it."
@@ -353,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39216a3a",
+   "id": "aed74086",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +372,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c62cfb81",
+   "id": "63f46e6b",
    "metadata": {},
    "source": [
     "__Task B.3__ Run your $K$-Means algorithm on the test data for $K=2,3,4,5$ clusters and plot the final cluster centers."
@@ -372,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14bf2ec6",
+   "id": "8d957140",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +390,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38d7b89c",
+   "id": "a608862d",
    "metadata": {},
    "source": [
     "## Radial Basis Function Network\n",
@@ -391,7 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a6503f5",
+   "id": "99834856",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +410,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c1a9d24",
+   "id": "08e0f1cd",
    "metadata": {},
    "source": [
     "__Task C.2__ Implement the Gaussian basis functions and transform the data accordingly"
@@ -410,7 +419,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6748c55",
+   "id": "210e115f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +428,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3f46f7e",
+   "id": "e9be94fb",
    "metadata": {},
    "source": [
     "__Task C.3__ Run simple linear regression on the transformed data and evaluate it on the test set"
@@ -428,7 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "065b2d77",
+   "id": "60c87032",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +450,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9b73b78",
+   "id": "264e8a91",
    "metadata": {},
    "source": [
     "__Open task__ Can you improve the performance of the RBF network?"
@@ -449,7 +458,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b06f9fda",
+   "id": "41a547a9",
    "metadata": {},
    "source": [
     "__Task C.4__ Evaluate your final model (either the one from Task C.3 or your improved model from the open task) on the test data"
@@ -458,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70847071",
+   "id": "52044a03",
    "metadata": {},
    "outputs": [],
    "source": [
