--- a/Notebooks/CSME2-WS2122-BonusPointAssignment1.ipynb
+++ b/Notebooks/CSME2-WS2122-BonusPointAssignment1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "bfd664c6",
+   "id": "231b4781",
    "metadata": {},
    "source": [
     "# CSME2 Bonus Point Assignment 1\n",
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "19109187",
+   "id": "e6d813ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4fa2e669",
+   "id": "d9625787",
    "metadata": {},
    "source": [
     "### Setup\n",
@@ -39,19 +39,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "0d5a8197",
+   "execution_count": 14,
+   "id": "03b19b75",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (3116975305.py, line 22)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipykernel_429611/3116975305.py\"\u001b[0;36m, line \u001b[0;32m22\u001b[0m\n\u001b[0;31m    ys_valid = train_data[int(n*0.8):, 22].reshape((:,1))\u001b[0m\n\u001b[0m                                                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# postion/velocity/acceleration  = 7 + 7 + 7 = 21\n",
     "# The last 7 columns reprensent the torche corresponding each joint\n",
@@ -70,21 +61,21 @@
     "# Split train_data as 80% training data and 20% validation data\n",
     "n = train_data.shape[0]\n",
     "xs_train = train_data[:int(n*0.8), :21]  \n",
-    "ys_train = train_data[:int(n*0.8), 22]\n",
+    "ys_train = train_data[:int(n*0.8), 22].reshape((-1,1))\n",
     "\n",
     "# Input and output validation data\n",
     "xs_valid = train_data[int(n*0.8):, :21]  \n",
-    "ys_valid = train_data[int(n*0.8):, 22].reshape((:,1))\n",
+    "ys_valid = train_data[int(n*0.8):, 22].reshape((-1,1))\n",
     "\n",
     "# Input and output test data\n",
     "xs_test = test_data[:, :21]\n",
-    "ys_test = test_data[:, 22]"
+    "ys_test = test_data[:, 22].reshape((-1,1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "35579fa1",
+   "execution_count": 15,
+   "id": "bc388016",
    "metadata": {},
    "outputs": [
     {
@@ -92,11 +83,11 @@
      "output_type": "stream",
      "text": [
       "(35587, 21)\n",
-      "(35587,)\n",
+      "(35587, 1)\n",
       "(8897, 21)\n",
-      "(8897,)\n",
+      "(8897, 1)\n",
       "(4449, 21)\n",
-      "(4449,)\n"
+      "(4449, 1)\n"
      ]
     }
    ],
@@ -120,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "525325f0",
+   "id": "3d49db42",
    "metadata": {},
    "source": [
     "__Task A.2__ Standardize the data such that\n",
@@ -135,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d537fa8f",
+   "id": "53a206b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ac3a72d",
+   "id": "e7015f2b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a177f464",
+   "id": "746cfc46",
    "metadata": {},
    "source": [
     "__Task A.3__"
@@ -182,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0764d98",
+   "id": "63d21abe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "786e8a34",
+   "id": "7ec30fcf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "058d504f",
+   "id": "16e06a93",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +230,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ffc2441a",
+   "id": "6c31fb70",
    "metadata": {},
    "source": [
     "## Linear regression\n",
@@ -250,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b99a849",
+   "id": "c15d1d80",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +257,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a46725f",
+   "id": "02ba8270",
    "metadata": {},
    "source": [
     "### Linear regression with polynomial features\n",
@@ -276,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "744f47c2",
+   "id": "a8e87706",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fab21598",
+   "id": "54b6473d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +313,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d83775fe",
+   "id": "16948921",
    "metadata": {},
    "source": [
     "## Clustering\n",
@@ -332,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d83d4540",
+   "id": "0197291c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +344,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "efed21f3",
+   "id": "b1905f9b",
    "metadata": {},
    "source": [
     "__Task B.2__ Generate test data set and plot it."
@@ -362,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aed74086",
+   "id": "144a0a29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63f46e6b",
+   "id": "a803c6ae",
    "metadata": {},
    "source": [
     "__Task B.3__ Run your $K$-Means algorithm on the test data for $K=2,3,4,5$ clusters and plot the final cluster centers."
@@ -381,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d957140",
+   "id": "437d1f85",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a608862d",
+   "id": "2fe9b46c",
    "metadata": {},
    "source": [
     "## Radial Basis Function Network\n",
@@ -400,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99834856",
+   "id": "29c56087",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +401,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08e0f1cd",
+   "id": "decaf8e4",
    "metadata": {},
    "source": [
     "__Task C.2__ Implement the Gaussian basis functions and transform the data accordingly"
@@ -419,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "210e115f",
+   "id": "a1d13e0f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +419,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9be94fb",
+   "id": "5de213e8",
    "metadata": {},
    "source": [
     "__Task C.3__ Run simple linear regression on the transformed data and evaluate it on the test set"
@@ -437,7 +428,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60c87032",
+   "id": "29eea2ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,7 +441,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "264e8a91",
+   "id": "25fd5cd4",
    "metadata": {},
    "source": [
     "__Open task__ Can you improve the performance of the RBF network?"
@@ -458,7 +449,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41a547a9",
+   "id": "36ce1e5c",
    "metadata": {},
    "source": [
     "__Task C.4__ Evaluate your final model (either the one from Task C.3 or your improved model from the open task) on the test data"
@@ -467,7 +458,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52044a03",
+   "id": "8dfb4f0f",
    "metadata": {},
    "outputs": [],
    "source": [
