--- a/CSME2-WS2122-BonusPointAssignment1.ipynb
+++ b/CSME2-WS2122-BonusPointAssignment1.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "22b7bc1d",
+   "id": "336ddf43-7a51-4942-88b1-fbef05d440a8",
    "metadata": {},
    "source": [
     "# CSME2 Bonus Point Assignment 1\n",
     "\n",
-    "<div style=\"text-align: right;font-size: 0.8em\">Document Version 1.0.0, released 01/12/2021</div>\n",
+    "<div style=\"text-align: right;font-size: 0.8em\">Document Version 1.0.1, released 03/12/2021</div>\n",
     "For detailed task instructions, please refer to the assignment PDF.\n",
     "\n",
     "DO NOT CLEAR THE OUTPUT of the notebook you are submitting!"
@@ -15,21 +15,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "989cf65e",
+   "execution_count": 1,
+   "id": "55262e5f-2f40-4108-9138-7a526f6fa4c0",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Add any additional import you need in this cell\n",
     "import numpy as np\n",
     "from sklearn.cluster import kmeans_plusplus, KMeans\n",
-    "from scipy.io import loadmat\n",
+    "\n",
     "np.random.seed(1234)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a005863b",
+   "id": "e16807c6-9b2d-479f-a48c-61fd2cc82796",
    "metadata": {},
    "source": [
     "### Setup\n",
@@ -39,61 +39,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "35544699",
+   "execution_count": null,
+   "id": "c91bf5d1-90f6-4f61-a681-1242f3f81364",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# postion/velocity/acceleration  = 7 + 7 + 7 = 21\n",
-    "# The last 7 columns reprensent the torche corresponding each joint\n",
-    "\n",
-    "train_data = loadmat(\"./sarcos_inv.mat\")[\"sarcos_inv\"]\n",
-    "test_data = loadmat(\"./sarcos_inv_test.mat\")[\"sarcos_inv_test\"]\n",
-    "\n",
-    "# Shuffle data so that it can be random splitted\n",
-    "np.random.seed(42) \n",
-    "np.random.shuffle(train_data)\n",
-    "np.random.shuffle(test_data)\n",
-    "\n",
-    "\n",
     "# Input and output training data\n",
-    "\n",
-    "# Split train_data as 80% training data and 20% validation data\n",
-    "n = train_data.shape[0]\n",
-    "xs_train = train_data[:int(n*0.8), :21]  \n",
-    "ys_train = train_data[:int(n*0.8), 22].reshape((-1,1))\n",
+    "# xs_train = \n",
+    "# ys_train = \n",
     "\n",
     "# Input and output validation data\n",
-    "xs_valid = train_data[int(n*0.8):, :21]  \n",
-    "ys_valid = train_data[int(n*0.8):, 22].reshape((-1,1))\n",
+    "# xs_valid = \n",
+    "# ys_valid =\n",
     "\n",
     "# Input and output test data\n",
-    "xs_test = test_data[:, :21]\n",
-    "ys_test = test_data[:, 22].reshape((-1,1))"
+    "# xs_test = \n",
+    "# ys_test = "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "92774289",
+   "execution_count": null,
+   "id": "432e41e8-7fa4-4d0a-a3b2-0c6881c7dbf8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(35587, 21)\n",
-      "(35587, 1)\n",
-      "(8897, 21)\n",
-      "(8897, 1)\n",
-      "(4449, 21)\n",
-      "(4449, 1)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Check for yourself \n",
-    "# The following should lead to output \n",
+    "# The following should lead (roughly) to output \n",
     "# (35587, 21)\n",
     "# (35587, 1)\n",
     "# (8897, 21)\n",
@@ -101,17 +73,17 @@
     "# (4449, 21)\n",
     "# (4449, 1)\n",
     "\n",
-    "print(xs_train.shape)\n",
-    "print(ys_train.shape)\n",
-    "print(xs_valid.shape)\n",
-    "print(ys_valid.shape)\n",
-    "print(xs_test.shape)\n",
-    "print(ys_test.shape)"
+    "# print(xs_train.shape)\n",
+    "# print(ys_train.shape)\n",
+    "# print(xs_valid.shape)\n",
+    "# print(ys_valid.shape)\n",
+    "# print(xs_test.shape)\n",
+    "# print(ys_test.shape)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "422a5b99",
+   "id": "1cd20cae-ee79-4a62-84ca-a1e73b10cd33",
    "metadata": {},
    "source": [
     "__Task A.2__ Standardize the data such that\n",
@@ -126,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a651a17",
+   "id": "5c152c5c-c06b-4d99-8950-750bbcffabda",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52ce676e",
+   "id": "28875927-bb84-4b91-a451-3aafb42bdcc9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d30413b",
+   "id": "92e51315-ee86-43b6-ba6d-f869d19e1e90",
    "metadata": {},
    "source": [
     "__Task A.3__"
@@ -173,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf6f9b7e",
+   "id": "42b3ac19-e652-4a78-8cb7-f030c466144a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ccca23f",
+   "id": "c3348e0c-6799-464a-9939-159dfd0e5a31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "647033a0",
+   "id": "ad11e721-414a-4944-bd78-9e7b9c8163c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +202,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "831133d0",
+   "id": "ef4f8d54-4e5d-4706-81dc-50e5902d83db",
    "metadata": {},
    "source": [
     "## Linear regression\n",
@@ -241,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6933a4f0",
+   "id": "2a9334e8-04c3-4b0b-aa79-ac3888b9ab59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +229,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5d99edf",
+   "id": "126a7728-c157-484a-8c19-737487f7dade",
    "metadata": {},
    "source": [
     "### Linear regression with polynomial features\n",
@@ -267,7 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9e3cf43",
+   "id": "410e12b5-a083-4cdf-8801-c122eb597bb8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4fce882",
+   "id": "88f1db66-1d17-425b-99dd-525e80112ca6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +285,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57130f73",
+   "id": "951d9707-89e6-451b-ac2d-8423845ab019",
    "metadata": {},
    "source": [
     "## Clustering\n",
@@ -323,7 +295,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "417dd3c4",
+   "id": "91c523b8-f2ed-41df-9dbb-afd254102f8a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +316,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d114f8c",
+   "id": "8fbbdd8d-0316-4eba-9172-e9411bead541",
    "metadata": {},
    "source": [
     "__Task B.2__ Generate test data set and plot it."
@@ -353,7 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "457ceb38",
+   "id": "9c0e6ca9-f070-4590-a130-d1b5aef0c736",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +335,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5cacf67",
+   "id": "c8583191-6666-4fb1-aa81-4a2994e502c2",
    "metadata": {},
    "source": [
     "__Task B.3__ Run your $K$-Means algorithm on the test data for $K=2,3,4,5$ clusters and plot the final cluster centers."
@@ -372,7 +344,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d02199c4",
+   "id": "f20b50a8-ab79-4808-af16-3f29f4131837",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +353,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d591a13",
+   "id": "664368f6-688f-45ed-8ca2-4c26fe915a67",
    "metadata": {},
    "source": [
     "## Radial Basis Function Network\n",
@@ -391,7 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0073a758",
+   "id": "0fdbd9b8-f444-4546-a703-491d430ca44e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +373,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed406750",
+   "id": "283eb1a9-5e6d-4df6-a653-c4912a2c4046",
    "metadata": {},
    "source": [
     "__Task C.2__ Implement the Gaussian basis functions and transform the data accordingly"
@@ -410,7 +382,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abe0ea02",
+   "id": "4829d70b-7276-449d-a801-c151a2d19279",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +391,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc86e7f6",
+   "id": "ee397e68-58af-4936-b70a-ea9f21510483",
    "metadata": {},
    "source": [
     "__Task C.3__ Run simple linear regression on the transformed data and evaluate it on the test set"
@@ -428,7 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe90eb11",
+   "id": "3520a758-68a4-4cc3-8913-0bae0c6ae1aa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +413,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2acfa79",
+   "id": "0311c46c-af9b-45a6-8926-0648b4e3a218",
    "metadata": {},
    "source": [
     "__Open task__ Can you improve the performance of the RBF network?"
@@ -449,7 +421,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75ca3aaa",
+   "id": "586f77ae-b5f9-4e02-9564-42573e5045a2",
    "metadata": {},
    "source": [
     "__Task C.4__ Evaluate your final model (either the one from Task C.3 or your improved model from the open task) on the test data"
@@ -458,7 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0fc8bfb",
+   "id": "a35eda50-ec10-453d-952a-82c73dfd2b0e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +458,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
