--- a/Notebooks/CSME2-WS2122-BonusPointAssignment1.ipynb
+++ b/Notebooks/CSME2-WS2122-BonusPointAssignment1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "22b7bc1d",
+   "id": "0a6aef78",
    "metadata": {},
    "source": [
     "# CSME2 Bonus Point Assignment 1\n",
@@ -15,8 +15,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "989cf65e",
+   "execution_count": 1,
+   "id": "026cfc0a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a005863b",
+   "id": "84632f31",
    "metadata": {},
    "source": [
     "### Setup\n",
@@ -39,8 +39,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "35544699",
+   "execution_count": 219,
+   "id": "425e6d7c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,17 +51,14 @@
     "test_data = loadmat(\"./sarcos_inv_test.mat\")[\"sarcos_inv_test\"]\n",
     "\n",
     "# Shuffle data so that it can be random splitted\n",
-    "np.random.seed(42) \n",
-    "np.random.shuffle(train_data)\n",
-    "np.random.shuffle(test_data)\n",
-    "\n",
+    "perm = np.random.RandomState(42).permutation(len(train_data))\n",
     "\n",
     "# Input and output training data\n",
     "\n",
     "# Split train_data as 80% training data and 20% validation data\n",
     "n = train_data.shape[0]\n",
-    "xs_train = train_data[:int(n*0.8), :21]  \n",
-    "ys_train = train_data[:int(n*0.8), 22].reshape((-1,1))\n",
+    "xs_train = train_data[perm[:int(n*0.8)], :21]  \n",
+    "ys_train = train_data[perm[:int(n*0.8)], 22].reshape((-1,1))\n",
     "\n",
     "# Input and output validation data\n",
     "xs_valid = train_data[int(n*0.8):, :21]  \n",
@@ -74,8 +71,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "92774289",
+   "execution_count": 220,
+   "id": "f1e34959",
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "422a5b99",
+   "id": "2b05879a",
    "metadata": {},
    "source": [
     "__Task A.2__ Standardize the data such that\n",
@@ -125,46 +122,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4a651a17",
+   "execution_count": 221,
+   "id": "e3c35a9f",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# function to standardize data\n",
+    "def standardize(data):\n",
+    "    N, D = data.shape\n",
+    "    data_std = data.copy()\n",
+    "    avg = np.mean(data_std, axis=0)\n",
+    "    std = np.std(data_std, axis=0)\n",
+    "    \n",
+    "    data_std = (data_std - avg)/std\n",
+    "    \n",
+    "    return data_std          \n",
+    "\n",
     "# Store the standardized data in the following variables\n",
-    "# xs_train_std = \n",
-    "# ys_train_std = \n",
+    "xs_train_std = standardize(xs_train)\n",
+    "ys_train_std = standardize(ys_train)\n",
     "\n",
-    "# xs_valid_std = \n",
-    "# ys_valid_std = \n",
+    "xs_valid_std = standardize(xs_valid)\n",
+    "ys_valid_std = standardize(ys_valid)\n",
     "\n",
-    "# xs_test_std = \n",
-    "# ys_test_std = "
+    "xs_test_std = standardize(xs_test)\n",
+    "ys_test_std = standardize(xs_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "52ce676e",
+   "execution_count": 222,
+   "id": "c33a425a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.465118419636068e-15\n",
+      "9.484019430860921e-17\n",
+      "-5.065607583254138e-16\n",
+      "6.069601879034238e-17\n",
+      "4.865783026033802e-16\n",
+      "4.865783026033802e-16\n",
+      "[1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "[1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "[1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]\n"
+     ]
+    }
+   ],
    "source": [
     "# Check for yourself\n",
     "# The following should lead to (roughly) six zeros and three arrays with (approximately) ones\n",
-    "#print(np.mean(xs_train_std))\n",
-    "#print(np.mean(ys_train_std))\n",
-    "#print(np.mean(xs_valid_std))\n",
-    "#print(np.mean(ys_valid_std))\n",
-    "#print(np.mean(xs_test_std))\n",
-    "#print(np.mean(ys_test_std))\n",
+    "print(np.mean(xs_train_std))\n",
+    "print(np.mean(ys_train_std))\n",
+    "print(np.mean(xs_valid_std))\n",
+    "print(np.mean(ys_valid_std))\n",
+    "print(np.mean(xs_test_std))\n",
+    "print(np.mean(ys_test_std))\n",
     "\n",
-    "#print(np.var(xs_train_std, axis=0))\n",
-    "#print(np.var(xs_valid_std, axis=0))\n",
-    "#print(np.var(xs_test_std, axis=0))"
+    "print(np.var(xs_train_std, axis=0))\n",
+    "print(np.var(xs_valid_std, axis=0))\n",
+    "print(np.var(xs_test_std, axis=0))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3d30413b",
+   "id": "9431243e",
    "metadata": {},
    "source": [
     "__Task A.3__"
@@ -172,8 +196,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "bf6f9b7e",
+   "execution_count": 223,
+   "id": "b2452ade",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,25 +213,25 @@
     "    The empirical variance of the provided vector\n",
     "    \"\"\"\n",
     "    # Your implementation\n",
-    "    pass"
+    "    return float(sum(np.square(xs-xs.mean()))/(len(xs)-1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1ccca23f",
+   "execution_count": 224,
+   "id": "657503ad",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Task A.3.b\n",
     "# Calculate the variance of ys_train_std using your function my_variance\n",
-    "# var_ys_train = my_variance(ys_train_std)"
+    "var_ys_train = my_variance(ys_train_std)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "647033a0",
+   "execution_count": 225,
+   "id": "1c73c133",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,12 +249,14 @@
     "    The SMSE of the provided data\n",
     "    \"\"\"\n",
     "    # Your implementation\n",
-    "    pass"
+    "    N = len(z1)\n",
+    "    MSE = float(sum(np.square(z2-z1)))\n",
+    "    return MSE/(N*np.square(s))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "831133d0",
+   "id": "25e71df9",
    "metadata": {},
    "source": [
     "## Linear regression\n",
@@ -240,24 +266,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6933a4f0",
+   "execution_count": 226,
+   "id": "bcb68e41",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.07566694209945357"
+      ]
+     },
+     "execution_count": 226,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# This variable should contain the weights corresponding to simple linear regression (LS criterion, no bias term)\n",
-    "# w_lr = \n",
     "\n",
-    "# This variable should contain the predictions using w_lr on the test data\n",
-    "# ys_pred_valid = \n",
+    "# Using least square method\n",
+    "w_lr = np.linalg.inv(xs_train_std.T @ xs_train_std) @ xs_train_std.T @ ys_train_std\n",
+    "\n",
+    "# This variable should contain the predictions using w_lr on the validation data\n",
+    "ys_pred_valid = xs_valid_std @ w_lr\n",
     "\n",
     "# This should contain the resulting smse\n",
-    "# smse_lr = my_smse(ys_pred_test, ys_valid_std, var_ys_train)"
+    "smse_lr = my_smse(ys_pred_valid, ys_valid_std, var_ys_train)\n",
+    "smse_lr"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e5d99edf",
+   "id": "d9879e5a",
    "metadata": {},
    "source": [
     "### Linear regression with polynomial features\n",
@@ -266,8 +306,57 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 278,
+   "id": "d2b0c5c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1.  0.  1.  2.  0.  0.  0.  1.  2.  4.]\n",
+      " [ 1.  3.  4.  5.  9. 12. 15. 16. 20. 25.]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(2, 10)"
+      ]
+     },
+     "execution_count": 278,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Test with library\n",
+    "import numpy as np\n",
+    "from sklearn.preprocessing import PolynomialFeatures\n",
+    "X = np.arange(6).reshape(2, 3)\n",
+    "poly = PolynomialFeatures(2)\n",
+    "print(poly.fit_transform(X))\n",
+    "poly.fit_transform(X).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 285,
+   "id": "cf11e49f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = np.arange(6).reshape(2, 3)\n",
+    "N, D = X.shape\n",
+    "degree = 2\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "a9e3cf43",
+   "id": "6d2e56f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,13 +376,16 @@
     "    An (N,M) numpy array containing the transformed input\n",
     "    \"\"\"\n",
     "    # Your implementation\n",
+    "    N, D = xs.shape\n",
+    "    \n",
+    "    \n",
     "    pass"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4fce882",
+   "id": "a011dfe6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +405,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57130f73",
+   "id": "81d46b5a",
    "metadata": {},
    "source": [
     "## Clustering\n",
@@ -323,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "417dd3c4",
+   "id": "8dd16d8e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +436,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d114f8c",
+   "id": "371df158",
    "metadata": {},
    "source": [
     "__Task B.2__ Generate test data set and plot it."
@@ -353,7 +445,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "457ceb38",
+   "id": "f086f821",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +455,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5cacf67",
+   "id": "db744cac",
    "metadata": {},
    "source": [
     "__Task B.3__ Run your $K$-Means algorithm on the test data for $K=2,3,4,5$ clusters and plot the final cluster centers."
@@ -372,7 +464,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d02199c4",
+   "id": "db904618",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +473,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d591a13",
+   "id": "c7e3ccd8",
    "metadata": {},
    "source": [
     "## Radial Basis Function Network\n",
@@ -391,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0073a758",
+   "id": "544e6669",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +493,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed406750",
+   "id": "1695f41c",
    "metadata": {},
    "source": [
     "__Task C.2__ Implement the Gaussian basis functions and transform the data accordingly"
@@ -410,7 +502,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abe0ea02",
+   "id": "d4d5e136",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +511,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc86e7f6",
+   "id": "19997b58",
    "metadata": {},
    "source": [
     "__Task C.3__ Run simple linear regression on the transformed data and evaluate it on the test set"
@@ -428,7 +520,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe90eb11",
+   "id": "846780b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2acfa79",
+   "id": "813bb786",
    "metadata": {},
    "source": [
     "__Open task__ Can you improve the performance of the RBF network?"
@@ -449,7 +541,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75ca3aaa",
+   "id": "33d693a0",
    "metadata": {},
    "source": [
     "__Task C.4__ Evaluate your final model (either the one from Task C.3 or your improved model from the open task) on the test data"
@@ -458,7 +550,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0fc8bfb",
+   "id": "1ea11238",
    "metadata": {},
    "outputs": [],
    "source": [
